--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Get Dogs</h1>
+    <h1>Get Dogs - Ejemplo de despliegue</h1>
   </header>
   <main>
     <button id="btn-get-dogs">Click Me</button>
